Use same DesktopCaptureOptions in DesktopCaptureBase and DesktopCaptureDevice

DesktopCaptureOptions impacts which underlying DesktopCapturer implementation is
used. But there is no guarantee that different DesktopCapturer implementations
would eventually return the same SourceList, or a Source in the SourceList
represents the same output content on the system. So DesktopCaptureBase and
DesktopCaptureDevice should use same DesktopCaptureOptions.

BUG=732224

Review-Url: https://codereview.chromium.org/2961193002
Cr-Commit-Position: refs/heads/master@{#485097}

Former-commit-id: 56efe642b5d1fc400ac7f34451d9a540f9d30fbb